add junit as a maven dependency, and ignore the generated javadocs (which need cleaning up).